--- a/series.conf
+++ b/series.conf
@@ -4,6 +4,6 @@ Herrallsvenskan="http://www.svenskhandboll.se/Handbollinfo/Tavling/SerierResulta
 Damallsvenskan="http://www.svenskhandboll.se/Handbollinfo/Tavling/SerierResultat/?t=1400202&s=2014"
 
 SERIES=" Elitserien_Damer Elitserien_Herrar Herrallsvenskan Damallsvenskan"
-#SERIES=" "
+SERIES=" Elitserien_Damer "
 
 INSTALL_DIR=/tmp/handboll
